--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <h2>GitHub Configuration</h2>
       <div style="display:flex;gap:8px;flex-wrap:wrap">
         <input id="githubToken" type="password" placeholder="GitHub Token (chỉ để commit)" style="flex:1" />
-        <input id="githubRepo" placeholder="owner/repo" style="width:260px" />
+        <input id="githubRepo" placeholder="owner/repo" value="crytals-sc/json-link" style="width:260px" />
         <input id="githubBranch" placeholder="branch (main)" value="main" style="width:120px" />
         <button id="commitToGithub" class="primary small">Commit to GitHub</button>
         <div id="githubStatus" class="github-status">Trạng thái</div>
@@ -145,7 +145,8 @@
     </div>
 
     <div class="panel">
-      <h2>Form phim (click row để sửa)</h2>
+      <h2>Form phim</h2>
+	<p>Note: https://gg.com/drive/d/17DFDJdo1w_c/.... -> driveId: 17DFDJdo1w_c </p>
       <div class="grid">
         <input id="title" placeholder="Title" />
         <input id="year" placeholder="Year" type="number" />
