--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="https://raw.githubusercontent.com/crytals-sc/json-link/refs/heads/main/favicon.ico" />
   <title>Movie Editor</title>
   <style>
     :root {
@@ -475,7 +475,7 @@
     </div>
   </div>
 
-  <script src="movie-editor.js"></script>
+  <script src="https://raw.githubusercontent.com/crytals-sc/json-link/refs/heads/main/movie-editor.js"></script>
 
 </body>
 
