Set default GitHub repo in input field

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2>GitHub Configuration</h2>
       <div style="display:flex;gap:8px;flex-wrap:wrap">
         <input id="githubToken" type="password" placeholder="GitHub Token (chỉ để commit)" style="flex:1"/>
-        <input id="githubRepo" placeholder="owner/repo" style="width:260px"/>
+        <input id="githubRepo" placeholder="owner/repo" value="crytals-sc/json-link" style="width:260px"/>
         <input id="githubBranch" placeholder="branch (main)" value="main" style="width:120px"/>
         <button id="commitToGithub" class="primary small">Commit to GitHub</button>
         <div id="githubStatus" class="github-status">Trạng thái</div>
